Added post init section

--- a/kickstart-mods/01.post-init.cfg
+++ b/kickstart-mods/01.post-init.cfg
@@ -1,3 +1,7 @@
+## => Initialize post section with a post installation log path
+##    and disable bluetooth and enable usb guard
+#
+################################################################
 %post --log=/root/post-installation.log
 #!/bin/bash
 
